@@ -32,3 +32,4 @@ lxc.network.type = veth
 lxc.network.flags = up
 lxc.network.link = GUESTLINK
 lxc.network.ipv4 = GUESTIP/24
+lxc.utsname = gitian
