@@ -1,4 +1,9 @@
 VM_SSH_PORT=2223
 if [ -z "$LXC_EXECUTE" ]; then
-  LXC_EXECUTE=lxc-start
+  ver=`lxc-start --version`
+  if dpkg --compare-versions $ver ge 1.1.0 ; then
+    LXC_EXECUTE=lxc-execute
+  else
+    LXC_EXECUTE=lxc-start
+  fi
 fi
